Crawler Manager now with more settings